.provarCaches/00Df2000001KKNJEA4/objects/INRF__Rule_Set_Log__c.object
<CustomObject>
    <description>An object for logging activities of Rule Action performed on Records for particular Rule Set in RuleForce.</description>
    <fields>
        <fullName>INRF__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Is_Child_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Child Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INRF__Is_Parent_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Parent Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INRF__Is_Rule_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rule Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INRF__Log__c</fullName>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Object_Id__c</fullName>
        <label>Object Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INRF__Rule_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rule Action</label>
        <referenceTo>INRF__Rule_Action__c</referenceTo>
        <relationshipLabel>Rule Set Logs</relationshipLabel>
        <relationshipName>Rule_Set_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>INRF__Rule_Set__c</fullName>
        <label>Rule Set</label>
        <referenceTo>INRF__Rule_Set__c</referenceTo>
        <relationshipLabel>Rule Set Logs</relationshipLabel>
        <relationshipName>Rule_Set_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>INRF__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INRF__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rule_Set_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rule Set Log</label>
    <listViews>
        <fullName>INRF__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rule Set Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rule Set Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>